DRAFT: Custom cell worked
TODO: Need to separate Logic Datasource from View

--- a/MU106/en.lproj/Localizable.strings
+++ b/MU106/en.lproj/Localizable.strings
@@ -9,5 +9,6 @@
 /* User Interface*/
 "ALL ROUTES" = "All routes";
 "FAVORITES" = "Favorites";
+"PRICE" = "Price";
 "ROUTE" = "Route";
 "ROUTES" = "Routes";
