--- a/MU106/ru.lproj/Localizable.strings
+++ b/MU106/ru.lproj/Localizable.strings
@@ -9,5 +9,6 @@
 /* User Interface*/
 "ALL ROUTES" = "Все маршруты";
 "FAVORITES" = "Избранные";
+"PRICE" = "Цена";
 "ROUTE" = "Маршрут";
 "ROUTES" = "Маршруты";
