--- a/MU106/ru.lproj/Localizable.strings
+++ b/MU106/ru.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 
 /* User Interface*/
 "ALL ROUTES" = "Все маршруты";
+"SHORT CURRENCY" = "руб.";
 "FAVORITES" = "Избранные";
 "PRICE" = "Цена";
 "ROUTE" = "Маршрут";
