--- a/MU106/en.lproj/Localizable.strings
+++ b/MU106/en.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 
 /* User Interface*/
 "ALL ROUTES" = "All routes";
+"SHORT CURRENCY" = "rbls";
 "FAVORITES" = "Favorites";
 "PRICE" = "Price";
 "ROUTE" = "Route";
